--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = ["setuptools>=43.0.0", "wheel"]
+requires = ["setuptools>=77", "setuptools_scm>=8"]
 
 [project]
 authors = [
@@ -85,6 +85,8 @@ select = [
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
+
+[tool.setuptools_scm]
 
 [tool.uv]
 package = true
